<resources>

    <string name="undodialog_undo_action_str">Undo</string>
    <string name="app_name">人脸识别</string>
    <string name="launcher_name">人脸识别</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">打开 drawer</string>
    <string name="drawer_close">关闭 drawer</string>
    <string name="date">日期</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">释放立即刷新</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="login">登录</string>
    <string name="login_page">登录页</string>
    <string name="username">用户名</string>
    <string name="photo">照片</string>
    <string name="password">密码</string>
    <string name="confirmPassword">确认密码</string>
    <string name="nickname">昵称</string>
    <string name="choosePhoto">选择照片</string>
    <string name="register">注册</string>
    <string name="register_name_digits">_0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLIMNOPQRSTUVWXYZ</string>
    <string name="rememberMe">记住我</string>
    <string name="autoLogin">自动登录</string>
    <string name="edit">编辑</string>
    <string name="delete">删除</string>
    <string name="similarity">相似度:%1$.2f</string>
    <string-array name="gender">
        <item>
            男
        </item>
        <item>
            女
        </item>
        <item>
            未知
        </item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
