<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="@string/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/textView2"
        tools:text="@string/register"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="?attr/colorPrimary" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:stretchColumns="0"
        android:id="@+id/tableLayout"
        android:layout_margin="@dimen/activity_vertical_margin">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:digits="@string/register_name_digits"
                android:id="@+id/editTextUserName"
                android:hint="@string/username"
                style="@style/Widget.AppCompat.EditText"
                />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@android:color/holo_red_dark"
                tools:text="*"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/editTextPassword"
                android:hint="@string/password"
                style="@style/Widget.AppCompat.EditText"
                />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@android:color/holo_red_dark"
                tools:text="*"/>

        </TableRow>
        <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal" >


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:id="@+id/confirmPasswordEditText"
            android:hint="@string/confirmPassword"
            style="@style/Widget.AppCompat.EditText"
            />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@android:color/holo_red_dark"
                tools:text="*"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal" >



            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/editTextNickName"
                android:hint="@string/nickname"
                style="@style/Widget.AppCompat.EditText" />
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="*"
                android:textColor="@android:color/holo_red_dark"
                tools:text="*"/>
        </TableRow>


    </TableLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout"
        android:layout_centerHorizontal="true"
        android:id="@+id/llPhto"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:id="@+id/ivUserfaceImg"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/photo"
            android:layout_weight="1" />
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="*"
            android:textColor="@android:color/holo_red_dark"
            tools:text="*"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonChooseUserFaceImg"
            tools:text="@string/choosePhoto"
            android:layout_margin="@dimen/activity_vertical_margin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/choosePhoto" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerGender"
            android:entries="@array/gender" />


        <Button
            android:text="@string/login_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin_page"
            android:layout_weight="1"
            android:layout_margin="@dimen/activity_vertical_margin"
            style="@style/Widget.AppCompat.Button.Colored"
            tools:text="@string/login_page" />
        <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegister"
            android:layout_weight="1"
            android:layout_margin="@dimen/activity_vertical_margin"
            style="@style/Widget.AppCompat.Button.Colored"
            tools:text="@string/register" />
    </LinearLayout>

</RelativeLayout>