<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent" android:layout_height="match_parent">
       <TextView
             android:text="@string/login"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
             tools:text="@string/login"
             android:layout_margin="@dimen/activity_vertical_margin"
             android:textStyle="bold"
             android:textSize="18sp"
             android:textColor="@color/light_blue" />

         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textView2"
             android:layout_centerHorizontal="true"
             android:stretchColumns="0"
             android:id="@+id/tableLayout"
             android:layout_margin="@dimen/activity_vertical_margin">

             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal" >


                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="textPersonName"
                     android:id="@+id/editTextUserName"
                     android:hint="@string/username"
                     style="@style/Widget.AppCompat.EditText"
                     android:digits="@string/register_name_digits" />

                 <TextView
                     android:text="*"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="*" />
             </TableRow>

             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal" >



                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:inputType="textPassword"
                     android:id="@+id/editTextPassword"
                     android:hint="@string/password"
                     style="@style/Widget.AppCompat.EditText" />
                 <TextView
                     android:text="*"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     tools:text="*" />
             </TableRow>
             <TableRow
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal" >

             </TableRow>


         </TableLayout>

         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_margin="@dimen/activity_vertical_margin"
             android:layout_below="@+id/tableLayout"
             >

             <CheckBox
                 android:text="@string/rememberMe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/checkBoxRemberMe"
                 android:layout_weight="1"
                 style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                 android:checked="true"
                 tools:text="@string/rememberMe" />

             <CheckBox
                 android:text="@string/autoLogin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/checkBoxAutoLogin"
                 android:layout_weight="1"
                 style="@style/Widget.AppCompat.CompoundButton.CheckBox"
                 android:checked="true"
                 tools:text="@string/autoLogin" />

             <Button
                 android:text="@string/login"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/btnLogin"
                 android:layout_weight="1"
                 android:layout_margin="@dimen/activity_vertical_margin"
                 style="@style/Widget.AppCompat.Button.Colored" />
         </LinearLayout>
    </RelativeLayout>

